CAY-2510 Create builder to load custom modules into plugins and modeler
CAY-2511 Contribute custom properties for attributes
CAY-2517 EventManager: optimization of adding listeners
CAY-2518 Add method to append having qualifier expression to ObjectSelect
CAY-2520 Split ObjectId into several specialized variants
CAY-2522 Make ObjectSelect a direct query
CAY-2540 Modeler: redesign dbRelationship editor dialog
CAY-2542 Modeler: redesign ObjRelationship editor dialog
CAY-2543 Move ResultSetMapping generation from metadata to translator
CAY-2549 Modeler: Redesign ObjAttribute editor dialog
CAY-2555 Use explicit ArcId in GraphChangeHandler methods

Bug Fixes:

CAY-2332 Property API: unable to use eq() and in() methods for toMany relationships
CAY-2509 Result of resolving lazily faulted relationships can be out-of-date
CAY-2530 Modeler: DB Import and Class Generation from Project is performed for removed datamaps
CAY-2531 Modeler: Importing same schema after Import Revert clears all entities in datamap
CAY-2533 Modeler: Exception on validating ObjRelationship without db path
CAY-2535 Modeler: Impossible to import stored procedure apart from db tables
CAY-2537 Modeler: Schema Generation Complete popup window is hidden
CAY-2544 Possible name clash of ivar and property name in generated class
CAY-2547 CayenneDataObject serialization issue
CAY-2559 Modeler: Warning dialog shows wrong information after changing target entity in dbRelationship
CAY-2561 Modeler: cgen type combobox doesn't set templates

----------------------------------
Release: 4.1.B1
Date: March 7, 2019
----------------------------------
Changes/New Features:

CAY-2446 Run Disjoint By Id queries outside of synchronized block
CAY-2447 Crypto support for LocalDateTime
CAY-2471 Support multiple XML project versions
CAY-2473 Modeler: cleanup attributes and relationship editors
CAY-2474 Modeler: swap buttons in dialog toolbar
CAY-2475 Modeler: move inheritance icon to name column in objAttr table and objRel table